objects/CustomNC__c.object
<CustomObject>
    <fields>
        <fullName>Field36332__c</fullName>
        <label>Field36332</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field7852__c</fullName>
        <label>Field7852</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testingSomething__c</fullName>
        <label>testingSomething</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CustomNC</label>
    <nameField>
        <label>CustomNC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomNCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>